# s3loader

./: README.md
src/: CMakeLists.txt  library.cpp  library.h  s3loader.cpp  s3loader.h
test/: CMakeLists.txt
test/loader_tests/: CMakeLists.txt  download.cpp
